--- a/project_covid19.html
+++ b/project_covid19.html
@@ -123,8 +123,7 @@
 			
 			<h1 class="page-title">COVID-19 Donations<span class="title-under"></span></h1>
 			<p class="page-description">
-				With the remaining funds from previous projects, as well as other donations, BYI was able to help three organizations:
-				 Parikrama, Pratyush, and Doctors Without Borders. 
+				With the remaining funds from previous projects, as well as other donations, BYI was able to help multiple organizations.
 
 			</p>
 			
@@ -195,7 +194,7 @@
 					<!--h2 class="title-style-2"> Cause sub title <span class="title-under"></span></h2-->
 
 					<p>
-						With remaining funds from previous projects, as well as donations from family and community members, BYI was able to make donations to three organizations: Parikrama, Pratyush, and Doctors Without Borders. 
+						With remaining funds from previous projects, as well as donations from family and community members, BYI was able to make donations to several organizations: Parikrama, Pratyush, Doctors Without Borders, Quarantined Student Youth Network, Oxygen Generator in Sahibabad, and Give2Asia.
 
 
 					</p>
@@ -206,7 +205,7 @@
 
 
 					<p>
-						BYI donated $300 to Parikrama Humanity Foundation's COVID Fund to provide meals for families in need. Click <a href="http://www.parikrmafoundation.org" target="_blank"><u><b>here</b></u></a> for more information about Parikrama.
+						BYI donated to Parikrama Humanity Foundation's COVID Fund to provide meals for families in need. Click <a href="http://www.parikrmafoundation.org" target="_blank"><u><b>here</b></u></a> for more information about Parikrama.
 
 
 					</p>
@@ -234,16 +233,42 @@
 
 
 					<p>
-						BYI donated $500 to Doctors Without Borders to help with their COVID Relief Fund. Visit their website by clicking <a href="https://www.doctorswithoutborders.org/" target="_blank"><u><b>here</b></u></a> for more information about the organization.
+						BYI donated to Doctors Without Borders to help with their COVID Relief Fund. Visit their website by clicking <a href="https://www.doctorswithoutborders.org/" target="_blank"><u><b>here</b></u></a> for more information about the organization.
+
+
+					</p>
+
+				</div>
+	
+
+			</div>
+
+			<div class="row fadeIn animated">
+
+				<div class="col-md-6 text-align">
+
+
+					<p>
+						BYI donated to Quarantined Student-Youth Network, or QSYN, to help with their mission to support people in India affected by COVID-19 by providing everything from food to homes. Click <a href="https://twitter.com/qsynetwork" target="_blank"><u><b>here</b></u></a> to go to their twitter page.
 
 
 					</p>
 
 				</div>
 
+				<div class="col-md-6 text-align">
+
+
+					<p>
+						BYI donated to Give2Asia, helping with their hundreds of charity projects that help with disasters, education, and more. Click <a href="https://give2asia.org/" target="_blank"><u><b>here</b></u></a> for more information about Give2Asia.
+
+
+					</p>
+
+				</div>
+	
+
 			</div>
-
-
 
 		
 
